file(GLOB_RECURSE _ASCEND_GE_RUNTIME_SRC_LIST RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "*.cc")
set_property(SOURCE ${_ASCEND_GE_RUNTIME_SRC_LIST} PROPERTY COMPILE_DEFINITIONS
    SUBMODULE_ID=mindspore::SubModuleId::SM_RUNTIME_FRAMEWORK)
add_library(_mindspore_ge_runtime_obj OBJECT ${_ASCEND_GE_RUNTIME_SRC_LIST})